Fix z-index on no-data dashboard.

--- a/src/app/pages/dashboard-page/states/setup/dashboard-setup.component.scss
+++ b/src/app/pages/dashboard-page/states/setup/dashboard-setup.component.scss
@@ -31,7 +31,7 @@
       font-weight: lighter;
       line-height: 35px;
       color: #b5d0fa;
-      z-index: 20;
+      z-index: 1;
       margin-left: 15px;
 
       &__content {
@@ -43,7 +43,7 @@
         &__img {
           margin-top: 23px;
           margin-left: 15px;
-          z-index: 20;
+          z-index: 1;
         }
       }
     }
@@ -56,7 +56,7 @@
     margin: -60px 20px 20px 20px;
     background-color: #36629f;
     border-radius: 4px;
-    z-index: 10;
+    z-index: 0;
 
     &__heading {
       display: flex;
